--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@
 body {
     font-family: 'League Spartan', sans-serif;
     font-size: 15px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
