--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap');/*Weights: 400, 500, 700 */
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap'); /*Weights: 400, 500, 700 */
 
 :root {
     --magenta-dark: hsl(300, 43%, 22%);
@@ -15,11 +15,119 @@
 }
 
 body {
-    font-family: 'League Spartan', sans-serif;
-    font-size: 15px;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'League Spartan', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    background-color: var(--white);
+    min-height: 100vh;
+    background-image: url(./images/bg-pattern-top-mobile.svg),
+    url(./images/bg-pattern-bottom-mobile.svg);
+    background-repeat: no-repeat, no-repeat;
+    background-position: left top, right bottom;
+    background-size: contain;
 }
+
+article {
+    display: flex;
+    flex-direction: column;
+    max-width: 325px;
+}
+
+header > h1 {
+    color: var(--magenta-dark);
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin: 1.8em 0 0.5em 0;
+    text-align: center;
+}
+
+header > p {
+    color: var(--magenta-darkgrey);
+    font-size: 1.05rem;
+    font-weight: 500;
+    margin: 0 0.1em 2em 0.1em;
+    text-align: center;
+    line-height: 1.5;
+}
+
+.rating > section {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--magenta-lightgray);
+    margin-bottom: 1em;
+    padding-top: 1em;
+    border: none;
+    border-radius: 10px;
+}
+
+.rating > section:last-of-type{
+    margin-bottom: 3em;
+}
+
+.stars {
+    display: block;
+    background-image: url(./images/icon-star.svg);
+    background-repeat: space;
+    padding-bottom: 1.5em;
+    margin: 0 7.5em;
+}
+
+.rating > section > p {
+    color: var(--magenta-dark);
+    font-weight: 700;
+    font-size: 1.1rem;
+    text-align: center;
+    margin: 0.5em 0 1em 0;
+}
+
+.reviews > div {
+    background-color: var(--magenta-dark);
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 1.2em;
+    color: var(--white);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 3em 2.5em 2em 2em;
+}
+
+.reviews hgroup {
+    display: flex;
+    flex-direction: column;
+}
+
+.reviews img {
+    width: 2.75em;
+    border-radius: 1000px;
+    margin-right: 1.5em;
+}
+
+.reviews h2 {
+    font-size: 1rem;
+    font-weight: 700;
+    margin-bottom: 0.5em;
+}
+
+.reviews h3 {
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--pink-light);
+}
+
+.reviews q {
+    line-height: 1.3;
+    font-size: 1rem;
+    margin-top: 1.5em;
+}
+
+@media screen and (min-width: 970px) {
+    body {
+        background-image: url(./images/bg-pattern-top-desktop.svg),
+        url(./images/bg-pattern-bottom-desktop.svg);
+        background-size: auto;
+    }
