--- a/style.css
+++ b/style.css
@@ -49,14 +49,18 @@ header > p {
     color: var(--magenta-darkgrey);
     font-size: 1.05rem;
     font-weight: 500;
-    margin: 0 0.1em 2em 0.1em;
+    margin-bottom: 2em;
     text-align: center;
     line-height: 1.5;
 }
 
 .rating > section {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-areas: "a"
+                         "b";
+    align-items: center;
+    justify-items: center;
+    column-gap: 1em;
     background-color: var(--magenta-lightgray);
     margin-bottom: 1em;
     padding-top: 1em;
@@ -69,18 +73,18 @@ header > p {
 }
 
 .stars {
-    display: block;
-    background-image: url(./images/icon-star.svg);
-    background-repeat: space;
-    padding-bottom: 1.5em;
-    margin: 0 7.5em;
+    grid-area: a;
 }
 
-.rating > section > p {
+.stars img {
+    margin-left: 0.2em;
+}
+
+.rating p {
+    grid-area: b;
     color: var(--magenta-dark);
     font-weight: 700;
     font-size: 1.1rem;
-    text-align: center;
     margin: 0.5em 0 1em 0;
 }
 
@@ -125,9 +129,101 @@ header > p {
     margin-top: 1.5em;
 }
 
-@media screen and (min-width: 970px) {
+@media screen and (min-width: 1440px) {
+    html {
+        font-size: 18px;
+    }
+    
     body {
+        font-size: 15px;
         background-image: url(./images/bg-pattern-top-desktop.svg),
         url(./images/bg-pattern-bottom-desktop.svg);
         background-size: auto;
     }
+
+    article {
+        max-width: 1100px;
+        display: grid;
+        grid-template-areas: "a b"
+                             "c c";
+        align-items: center;
+        justify-items: end;
+    }
+
+    header {
+        grid-area: a;
+        width: 30em;
+        justify-self: start;
+    }
+
+    header > h1 {
+        text-align: left;
+        padding-right: 1em;
+        margin-top: 0em;
+        font-size: 3rem;
+    }
+
+    header > p {
+        text-align: left;
+        font-size: 1rem;
+        margin-bottom: 0em;
+    }
+
+    .rating {
+        grid-area: b;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        width: fit-content;
+    }
+
+    .rating > section {
+        grid-template-areas: "a b";
+        width: 460px;
+        padding: 1.3em 2.2em;
+        justify-content: start;
+    }
+
+    .rating p {
+        margin: 0;
+        margin-left: 1em;
+        font-size: 1rem;
+    }
+
+    .rating section:nth-of-type(1) {
+        margin-right: 6em;
+    }
+
+    .rating section:nth-of-type(2) {
+        margin-right: 3em;
+    }
+
+    .stars {
+        width: max-content;
+    }
+
+    .reviews {
+        grid-area: c;
+        display: flex;
+        flex-direction: row;
+        column-gap: 2em;
+        align-items: center;
+    }
+
+    .reviews > div {
+        padding: 2.5em 1.8em 2em 2.5em;
+    }
+
+    .reviews > div:nth-last-of-type(2) {
+        margin-top: 2em;
+    }
+
+    .reviews > div:nth-last-of-type(1) {
+        margin-top: 4em;
+    }
+
+    .reviews q {
+        font-size: 0.9rem;
+    }
+}
